Add support for multiple services
